--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <p>Esto es un párrafo</p>
     <a href = "https://www.w3schools.com">Este es un hipervinculo a la pagina de w3schools</a>
     <ul>
-        <li>Informacion desordenada 1</li>
-        <li>Información desordenada 2</li>
-        <li>Informacion desordenada 3</li>
+        <li>Informacion desordenada </li>
+        <li>Información desordenada </li>
+        <li>Informacion desordenada </li>
     </ul>
 <!--Esto es un comentario-->
     <ol>
-        <li>Información ordenada 1</li>
-        <li>Información ordenada 2</li>
-        <li>Información ordenada 3</li>
+        <li>Información ordenada </li>
+        <li>Información ordenada </li>
+        <li>Información ordenada </li>
     </ol>
 </body>
 </html>
