--- a/HTML/Ejercicio3.html
+++ b/HTML/Ejercicio3.html
@@ -51,7 +51,7 @@
         <input type = "radio" id = "Amarillo" name = "Color" value = "Amarillo">
         <label for = "Amarillo" > Amarillo</label><br>
         <p>
-        <input type = "checkbox" id = "Terminos" name = "Terminos" value = "Terminos">
+        <input type = "checkbox" id = "Terminos" name = "Terminos" value = "Terminos" required>
         <label for = "Terminos" > Aceptar Términos y Condiciones</label><br>
         </p><br>
         
