--- a/HTML/Ejercicio5.html
+++ b/HTML/Ejercicio5.html
@@ -45,5 +45,38 @@
         
         </section>
     </main>
+    <footer>
+        <div>
+            <h3>TRADE</h3>
+            <p>dghnjghjghn</p>
+            <p>&copy; 2010 - 2020</p>
+            <p>Privacy - Terms</p>
+        </div>
+        <div>
+            <h3>Product</h3>
+            <p>Product</p>
+            <p>Product</p>
+            <p>Product</p>
+        </div>
+        <div>
+            <h3>Features</h3>
+            <p>Features</p>
+            <p>Features</p>
+            <p>Features</p>
+        </div>
+        <div>
+            <h3>Resources</h3>
+            <p>Resources</p>
+            <p>Resources</p>
+            <p>Resources</p>
+        </div>
+        <div>
+            <h3>Company</h3>
+            <p>Resources</p>
+            <p>Resources</p>
+            <p>Resources</p>
+        </div>
+    
+    </footer>
 </body>
 </html>
