Ejercicio6 Terminado con header y main

--- a/HTML/Ejercicio6.html
+++ b/HTML/Ejercicio6.html
@@ -6,13 +6,16 @@
     <title>Cartelera</title>
 </head>
 <body>
+    <header>
     <div id="Inicio">
     <h1>Cartelera</h1>
     <a href="#Pelicula1" > <img src="https://imgs.search.brave.com/uqiTVSG4cqoC496EPInr4pNUa_NROqZ-qzAP7yVmHpw/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9tLm1l/ZGlhLWFtYXpvbi5j/b20vaW1hZ2VzL0kv/ODEtaUd6eC1CZ0wu/anBn" alt="Toy Story 4" width="200" height="300"> </a>
     <a href="#Pelicula2" > <img src="https://imgs.search.brave.com/m-xHlaOEKxcU2hO0WigL-LiXiQayorE8RtKQFBZbw0o/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/bXViaXMuZXMvbWVk/aWEvdXNlcnMvNzI4/Ni85NzU2Ny9wb3J0/YWRhLWVsLXJleS1s/ZW9uLWRlLWxhLWNv/bGVjY2lvbi1sX2Nv/dmVyLmpwZw" alt="El Rey Leon" width="200" height="300"></a>
     <a href="#Pelicula3" > <img src="https://imgs.search.brave.com/ptRLkqnxdOY7l8Gim1Q-JXG2z-AcpRIsfAkxvYvHZfI/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9oaXBz/LmhlYXJzdGFwcHMu/Y29tL2htZy1wcm9k/L2ltYWdlcy9zcGlk/ZXItbWFuLW5vLXdh/eS1ob21lLWVsZWN0/cm8tcG9zdGVyLWZv/dG9ncmFtYXMtMTYz/ODU1OTAzNC5qcGc_/cmVzaXplPTk4MDoq" alt="Spiderman No Way Home" width="200" height="300"></a>
     </div>
-    
+    </header>
+
+    <main>
     <div id="Pelicula1" style="position: absolute; top: 500%" >
         <h2>Toy Story 4</h2>
         <img src="https://imgs.search.brave.com/uqiTVSG4cqoC496EPInr4pNUa_NROqZ-qzAP7yVmHpw/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9tLm1l/ZGlhLWFtYXpvbi5j/b20vaW1hZ2VzL0kv/ODEtaUd6eC1CZ0wu/anBn" alt="Toy Story 4" width="500" height="600">
@@ -35,5 +38,6 @@
         </p>
         <a href="#Inicio" > <button type="button" > Volver al Inicio</button></a>
     </div>
+    </main>
 </body>
 </html>
