Ejercicio6 con icon

--- a/HTML/Ejercicio6.html
+++ b/HTML/Ejercicio6.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cartelera</title>
+    <link rel="icon" type="image/x-icon" href="https://imgs.search.brave.com/4zQW0_tUbiF5SzhTuxo3LhojXzH3VWVjAIDpHpZTGn4/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9va2Rp/YXJpby5jb20vZGlh/cmlvbWFkcmlkaXN0/YS9pbWcvMjAyMy8w/NC8wNC9lc2N1ZG8t/cmVhbC1tYWRyaWQt/NjU1eDM2OC5qcGc">
 </head>
 <body>
     <header>
