--- a/HTML/Ejercicio7.html
+++ b/HTML/Ejercicio7.html
@@ -2,10 +2,27 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Naturaleza" content="Pagina para concienciar sobre el medio ambiente y la naturaleza">
+    <meta name="author" content="Christian Pérez Montalbán">
     <title>Ejercicio 7</title>
+    <link rel="icon" type="image/x-icon" href="https://imgs.search.brave.com/53ZEoqGf-UG3EDNxLXdmxn9Fq3Zb3gO4gs1ML9XLnoc/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9jZG4u/YnJhbmRmZXRjaC5p/by9pZFpxbHNRNEh3/L3cvNDAwL2gvNDAw/L3RoZW1lL2Rhcmsv/aWNvbi5qcGVnP2M9/MWJ4aWQ2NE11cDdh/Y3pld1NBWU1YJnQ9/MTc1ODg4NTEyMTQ0/MA">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="https://imgs.search.brave.com/0Wsj5VqUeD9Xia_oGgeHLuZMRL-fxO850g5Rt81Dpwc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMudmV4ZWxzLmNv/bS9tZWRpYS91c2Vy/cy8zLzI2MjAxMy9p/c29sYXRlZC9wcmV2/aWV3L2NjNThjZDM4/MzI3YTAwNDcyZTM5/ZTVkOTY2OWNiMGQ3/LWljb25vLWRlLW5h/dHVyYWxlemEtZGUt/aG9qYS1kZS1wbGFu/dGEucG5n" > <img src="https://imgs.search.brave.com/0Wsj5VqUeD9Xia_oGgeHLuZMRL-fxO850g5Rt81Dpwc/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMudmV4ZWxzLmNv/bS9tZWRpYS91c2Vy/cy8zLzI2MjAxMy9p/c29sYXRlZC9wcmV2/aWV3L2NjNThjZDM4/MzI3YTAwNDcyZTM5/ZTVkOTY2OWNiMGQ3/LWljb25vLWRlLW5h/dHVyYWxlemEtZGUt/aG9qYS1kZS1wbGFu/dGEucG5n" alt="Icono naturaleza" width="3%"></a>
+            <a href="#home" > Home</a>
+            <a href="#about" > About</a>
+            <a href="#services" > Services</a>
+            <a href="#contact" > Contact</a>
+            <a><button type="button" > 202-505-3333</button></a>
+        </nav> 
+        <div>
+            <h1>We all love</h1>
+            <h1>NATURE</h1>
+            <p>Look deep into nature, and you will undertand everything better.</p>
+            <button type="button" > Get started</button>
+        </div>  
+    </header>
 </body>
 </html>
