--- a/CSS/Ejercicio2/Ejercicio2.html
+++ b/CSS/Ejercicio2/Ejercicio2.html
@@ -5,16 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 2</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         nav{
             background-color: blanchedalmond;
             display: flex;
-            justify-content: flex-end;
+            align-items: center;
+            justify-content: space-between;
+        }
+        nav img{
+            padding-left: 15px;
         }
         .nav-list{
             display: flex;
             flex-direction: row;
             list-style-type: none;
             gap: 2px;
+            padding-right: 5px;
         }
 
         .nav-list a {
@@ -32,6 +41,7 @@
 </head>
 <body>
     <nav>
+        <img src="coffee-hero-section.png" alt="foto de cafe" width="50" height="50">
         <ul class="nav-list">
             <li><a href="#Home" > Home</a></li>
             <li><a href="#About" > About</a></li>
