Ejercicio3 Terminado con imagen nueva

--- a/CSS/Ejercicio3/Ejercicio3.html
+++ b/CSS/Ejercicio3/Ejercicio3.html
@@ -76,7 +76,7 @@
 </head>
 <body>
      <nav>
-        <img src="coffee-hero-section.png" alt="foto de cafe" width="50" height="50">
+        <img src="icons8-css-logo-240.png" alt="foto de cafe" width="50" height="50">
         <ul class="nav-list">
             <li><a href="#Home" > Home</a></li>
             <li><a href="#About" > About</a></li>
