Ejercicio3 Terminado actualizado y Ejercicio6 Terminado

--- a/CSS/Ejercicio6/Ejercicio6.html
+++ b/CSS/Ejercicio6/Ejercicio6.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 6</title>
     <style>
-        .footer{
-            display: flex;
-            justify-content: space-between;
+        .footer {
+            display:flex;
+            justify-content:space-between;
+            padding: 20px 20px;
             padding-left: 130px;
             padding-right: 130px;
             background-color: black;
             
         }
 
-        .footer .footer-coffee{
+        .footer a{
             color: white;
             text-decoration: none;
             list-style-type: none;
