Ejercicio7 Terminado con border radius

--- a/CSS/Ejercicio7/Ejercicio7.html
+++ b/CSS/Ejercicio7/Ejercicio7.html
@@ -56,6 +56,7 @@
             padding-top: 10%;
             padding-bottom: 15%;
             text-align:end;
+            border-radius: 5px;
            
         }
 
@@ -122,6 +123,7 @@
         #menu-section {
             background-color: sienna;
             padding-bottom: 40px;
+            border-radius: 5px;
         }
 
         #menu-section .section-title {
@@ -163,6 +165,7 @@
             padding-left: 130px;
             padding-right: 130px;
             background-color: black;
+            border-radius: 5px;
             
         }
 
