Nav terminado, about terminado, y services terminado

--- a/CSS/Ejercicio Web Completa 1/index.html
+++ b/CSS/Ejercicio Web Completa 1/index.html
@@ -5,13 +5,13 @@
 
   <ul> 
 
-    <li><a href="#">Home</a></li> 
+    <li><a class="a-home" href="#">Home</a></li> 
 
-    <li><a href="#">About</a></li> 
+    <li><a class="a-about" href="#">About</a></li> 
 
-    <li><a href="#">Services</a></li> 
+    <li><a class="a-services" href="#">Services</a></li> 
 
-    <li><a href="#">Contact</a></li> 
+    <li><a class="a-contact" href="#">Contact</a></li> 
 
   </ul> 
 
@@ -29,7 +29,7 @@
 
 <div> 
 
-  <div>&#x1F4D6;</div> 
+  <div class="services-container-icon">&#x1F4D6;</div> 
 
   <h3>Elephant Facts</h3> 
 
@@ -39,7 +39,7 @@
 
 <div> 
 
-  <div>&#x1F331;</div> 
+  <div class="services-container-icon">&#x1F331;</div> 
 
   <h3>Elephant Conservation</h3> 
 
@@ -49,7 +49,7 @@
 
 <div> 
 
-  <div>&#x1F52E;</div> 
+  <div class="services-container-icon">&#x1F52E;</div> 
 
   <h3>Elephant Myths</h3> 
 
