Contact casi Terminado

--- a/CSS/Ejercicio Web Completa 1/index.html
+++ b/CSS/Ejercicio Web Completa 1/index.html
@@ -67,15 +67,15 @@
 
     <label for="name">Name:</label> 
 
-    <input type="text" name="name" required autofocus> 
+    <input class="name" type="text" name="name" required autofocus> 
 
     <label for="email">Email:</label> 
 
-   <input type="email" name="email" required> 
+   <input class="email" type="email" name="email" required> 
 
     <label for="message">Message:</label> 
 
-    <textarea name="message" rows="6" required></textarea> 
+    <textarea class="message" name="message" rows="6" required></textarea> 
 
     <button type="submit">Send</button> 
 
