--- a/CSS/Ejercicio Web Completa gato/index.html
+++ b/CSS/Ejercicio Web Completa gato/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 
-<body>
+<body class="poppins-light">
     <header>
         <nav>
             <ul class="menu">
