--- a/CSS/Ejercicio Web Completa gato/index.html
+++ b/CSS/Ejercicio Web Completa gato/index.html
@@ -21,9 +21,8 @@
             <a href="#"><img src="https://cdn-icons-png.flaticon.com/128/2330/2330051.png" width="36px" alt="Logo"></a>
         </div>
         <div class="search">
-            <input type="text" placeholder="Buscar...">
-            <button>🔎︎</button>
-            <button class="hamburger">☰</button>
+            <input type="text" class="poppins-light" placeholder="Buscar...">
+            <button class="lupa">🔎︎</button>
         </div>
     </header>
     <div class="cta-container">
@@ -31,7 +30,7 @@
     </div>
     <footer>
         <div class="footer-copy">
-            <h3>ONLY CATS</h3>
+            <h3 class="poppins-light">ONLY CATS</h3>
             <small>&copy; 2000 – 2023</small>
         </div>
         <div class="footer-menu">
