--- a/JAVASCRIPT/Prueba4/index.html
+++ b/JAVASCRIPT/Prueba4/index.html
@@ -9,7 +9,12 @@
 <body>
     <button id="agregar">Agregar Tarea</button>
     <input type="text" id="entrada">
-    <div id="tareas"></div>
+    <button id="cambiarcolor">Cambiar color</button>
+    <div id="tareas">
+        <ul id="listatareas">
+
+        </ul>
+    </div>
 
     <script src="script.js"></script>
 </body>
